Use table for review infor instead of definition list. Fixes layout problem with empty definitions.
git-svn-id: https://trac-hacks.org/svn@15317 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/peerreviewplugin/trunk/codereview/htdocs/css/peerreview.css
+++ b/peerreviewplugin/trunk/codereview/htdocs/css/peerreview.css
@@ -6,10 +6,14 @@ p.help{
 
 .info-table{
   border-collapse: collapse;
+  margin-bottom: 0.5em;
 }
 
 .info-table th{
- width: 10em;
+ width: 9em;
+ text-align: right;
+ font-weight: bold;
+ padding-right: 0.5em;
 }
 
 table.code th.performCodeReview{
